Project section alignment corrected

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
   grid-template-columns: 6fr 4fr;
 
   box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2);
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0);
 }
 
 .header-child {
@@ -190,7 +190,7 @@ body {
 
 .main {
   display: grid;
-  grid-template-columns: 6fr 4fr;
+  grid-template-columns: 7fr 3fr;
   grid-template-rows: 1fr;
 }
 
@@ -201,6 +201,7 @@ body {
   padding: 24px 24px;
   background-color: #e2e8f0;
   grid-template-rows: 5% 95%;
+  box-shadow: 0 4px 8px 0 #e2e8f0 inset;
 }
 
 .main .left-col .your-projects {
@@ -212,9 +213,12 @@ body {
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
-.main .left-col .your-projects .project-card{
+.main .left-col .your-projects .project-card {
   height: 100%;
   background-color: white;
   border-radius: 8px;
   border-left: 8px solid #f0b429;
+
+  box-sizing: border-box;
+  padding: 20px;
 }
